feat: add rools in css for valid and invalid inputs

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
               name="user-name"
               form="quote-form"
               required
+              autocomplete="off"
               title="Enter your name"
               placeholder="Name (Required)">
 
@@ -306,6 +307,7 @@
               name="email-address"
               form="quote-form"
               required
+              autocomplete="off"
               title="Enter your email in format: username@domain"
               placeholder="Email (Required)">
 
