feat: add add/remove active-class to links in navbar

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </h1>
 
       <nav>
-        <ul class="navbar header__navbar">
+        <ul id="navbar" class="navbar header__navbar">
           <li class="navbar__item">
-            <a class="navbar__link navbar__link--active" href="#!">Home</a>
+            <a class="navbar__link navbar__link--active" href="#slider">Home</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="#services">Services</a>
@@ -43,7 +43,7 @@
 
   <main>
 
-    <div class="slider">
+    <div id="slider" class="slider">
       <div class="wrapper">
 
         <div class="slider__wrapper">
