--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <button class="slider__button slider__button--left pixel-perfect" aria-label="previous slide"></button>
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
   
-          <ul class="slider-list">
+          <ul id="slider-list" class="slider-list">
             <li class="slider-list__item">
               <div class="iphone-vertical">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
@@ -122,73 +122,49 @@
         <h2 class="portfolio__title">Portfolio</h2>
         <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
   
-        <ul class="portfolio__tabs tabs-list pixel-perfect">
+        <ul id="tabs-list" class="portfolio__tabs tabs-list pixel-perfect">
           <li class="tabs-list__item"><button class="portfolio-tab portfolio-tab--active">All</button></li>
           <li class="tabs-list__item"><button class="portfolio-tab">Web design</button></li>
           <li class="tabs-list__item"><button class="portfolio-tab">Graphic design</button></li>
           <li class="tabs-list__item"><button class="portfolio-tab">Artwork</button></li>
         </ul>
   
-        <ul class="portfolio__images images-list">
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 1
-              <img class="portfolio__img portfolio__img--01" src="./assets/images/image-01.png" alt="portfolio image 1">
-            </a>
+        <ul id="images-list" class="portfolio__images images-list">
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--01" src="./assets/images/image-01.png" alt="portfolio image 1">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 2
-              <img class="portfolio__img portfolio__img--02" src="./assets/images/image-02.png" alt="portfolio image 2">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--02" src="./assets/images/image-02.png" alt="portfolio image 2">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 3
-              <img class="portfolio__img portfolio__img--03" src="./assets/images/image-03.png" alt="portfolio image 3">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--03" src="./assets/images/image-03.png" alt="portfolio image 3">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 4
-              <img class="portfolio__img portfolio__img--04" src="./assets/images/image-04.png" alt="portfolio image 4">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--04" src="./assets/images/image-04.png" alt="portfolio image 4">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 5
-              <img class="portfolio__img portfolio__img--05" src="./assets/images/image-05.png" alt="portfolio image 5">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--05" src="./assets/images/image-05.png" alt="portfolio image 5">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 6
-              <img class="portfolio__img portfolio__img--06" src="./assets/images/image-06.png" alt="portfolio image 6">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--06" src="./assets/images/image-06.png" alt="portfolio image 6">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 7
-              <img class="portfolio__img portfolio__img--07" src="./assets/images/image-07.png" alt="portfolio image 7">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--07" src="./assets/images/image-07.png" alt="portfolio image 7">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 8
-              <img class="portfolio__img portfolio__img--08" src="./assets/images/image-08.png" alt="portfolio image 8">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--08" src="./assets/images/image-08.png" alt="portfolio image 8">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 9
-              <img class="portfolio__img portfolio__img--09" src="./assets/images/image-09.png" alt="portfolio image 9">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--09" src="./assets/images/image-09.png" alt="portfolio image 9">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 10
-              <img class="portfolio__img portfolio__img--10" src="./assets/images/image-10.png" alt="portfolio image 10">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--10" src="./assets/images/image-10.png" alt="portfolio image 10">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 11
-              <img class="portfolio__img portfolio__img--11" src="./assets/images/image-11.png" alt="portfolio image 11">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--11" src="./assets/images/image-11.png" alt="portfolio image 11">
           </li>
-          <li class="images-list__item">
-            <a class="portfolio__link" href="#!">Link to portfolio image 12
-              <img class="portfolio__img portfolio__img--12" src="./assets/images/image-12.png" alt="portfolio image 12">
-            </a>
+          <li class="images-list__item" tabindex="0">
+            <img class="portfolio__img portfolio__img--12" src="./assets/images/image-12.png" alt="portfolio image 12">
           </li>
         </ul>
 
