feat: add all functionality to portfolio tabs and images

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
               type="text"
               name="subject"
               form="quote-form"
+              autocomplete="off"
               placeholder="Subject">
 
             <textarea
@@ -290,6 +291,7 @@
               form="quote-form"
               cols="60"
               rows="8"
+              autocomplete="off"
               placeholder="Describe your project in detail..."></textarea>
 
             <input
@@ -355,8 +357,8 @@
     <div class="modal__overlay"></div>
     <div class="modal__message">
       <h3 class="message__title">Письмо отправлено</h3>
-      <p id="message-subject" class="message__text">Тема</p>
-      <p id="message-discribe" class="message__text">Описание</p>
+      <p id="message-subject" class="message__text">Без темы</p>
+      <p id="message-describe" class="message__text">Без описания</p>
       <button id="message-btn" class="message__btn">Ок</button>
     </div>
   </div>
