feat: fix some css property with UI/UX

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <h3 class="message__title">Письмо отправлено</h3>
       <p id="message-subject" class="message__text">Без темы</p>
       <p id="message-describe" class="message__text">Без описания</p>
-      <button id="message-btn" class="message__btn">Ок</button>
+      <button id="message-btn" class="message__btn">Ok</button>
     </div>
   </div>
 
