--- a/index.html
+++ b/index.html
@@ -52,18 +52,23 @@
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
   
           <ul id="slider-list" class="slider-list">
-            <li class="slider-list__item">
+            <li class="slider-list__item slider-hidden">
               <div class="iphone-vertical">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
                 <img class="iphone__screen" src="./assets/images/iphone-vertical-screen.png" alt="Vertical phone screen content">
               </div>
-            </li>
-            <li class="slider-list__item">
               <div class="iphone-horizontal">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Horizontal phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Horizontal phone">
                 <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone screen content">
+              </div>
+            </li>
+            <li class="slider-list__item">
+              <div class="iphones-container">
+                <img class="iphone__bg" src="./assets/images/iphones-bg.png" alt="Vertical phones">
+                <img class="iphone__base" src="./assets/images/iphone-base-big.png" alt="Vertical phones">
+                <img class="iphone__screen" src="./assets/images/iphones-vertical-screen.png" alt="Vertical phones screen content">
               </div>
             </li>
           </ul>
