--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
   
           <ul id="slider-list" class="slider-list">
-            <li class="slider-list__item slider-hidden">
+            <li class="slider-list__item">
               <div class="iphone-vertical">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
@@ -64,7 +64,7 @@
                 <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone screen content">
               </div>
             </li>
-            <li class="slider-list__item">
+            <li class="slider-list__item slider-hidden">
               <div class="iphones-container">
                 <img class="iphone__bg" src="./assets/images/iphones-bg.png" alt="Vertical phones">
                 <img class="iphone__base" src="./assets/images/iphone-base-big.png" alt="Vertical phones">
@@ -358,7 +358,7 @@
     </div>
   </footer>
 
-  <div id="modal" class="modal-hidden">
+  <div id="modal" class="modal--hidden">
     <div class="modal__overlay"></div>
     <div class="modal__message">
       <h3 class="message__title">Письмо отправлено</h3>
