feat: add swiper functionality in slaider

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
     <div id="slider" class="slider">
       <div class="wrapper">
-
-        <div class="slider__wrapper">
+        
+        <div class="slider__container">
 
           <button class="slider__button slider__button--left pixel-perfect" aria-label="previous slide"></button>
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
   
           <ul id="slider-list" class="slider-list">
-            <li class="slider-list__item">
+            <li class="slider-list__item active">
               <div class="iphone-vertical">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
@@ -64,7 +64,7 @@
                 <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone screen content">
               </div>
             </li>
-            <li class="slider-list__item slider-hidden">
+            <li class="slider-list__item">
               <div class="iphones-container">
                 <img class="iphone__bg" src="./assets/images/iphones-bg.png" alt="Vertical phones">
                 <img class="iphone__base" src="./assets/images/iphone-base-big.png" alt="Vertical phones">
