style: change css, html, js in slider and form section

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
               placeholder="Email (Required)">
 
             <input
+              id="input-subject"
               class="form__input form__input--subject"
               type="text"
               name="subject"
@@ -291,6 +292,7 @@
               placeholder="Subject">
 
             <textarea
+              id="input-description"
               class="form__input form__input--textarea"
               name="project-details"
               form="quote-form"
