--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style-layout.css">
+  <link rel="stylesheet" href="style.css">
   <title>Singolo</title>
 </head>
 
@@ -344,7 +344,7 @@
   <footer class="footer">
     <div class="wrapper footer__wrapper">
 
-      <p class="footer__copyright">&copy; Copyright 2013 &middot; by PSDchat.com</p>
+      <p class="footer__copyright copyright">&copy; Copyright 2013 &middot; by PSDchat.com</p>
 
       <ul class="footer__socials socials-list">
         <li class="socials-list__item">
