feat: add media queries for slider section

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         
         <div class="slider__container">
 
-          <button class="slider__button slider__button--left pixel-perfect" aria-label="previous slide"></button>
+          <button class="slider__button slider__button--left" aria-label="previous slide"></button>
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
   
           <ul id="slider-list" class="slider-list">
             <li class="slider-list__item slider--active" data-bg_style="slider__item1">
-              <div class="iphone-vertical">
-                <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
-                <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
-                <img class="iphone__screen" src="./assets/images/iphone-vertical-screen.png" alt="Vertical phone screen content">
+              <div class="phone-container">
+                <img class="phone__shadow phone-vertical" src="./assets/images/phone-vertical-shadow.png" alt="Vertical phone">
+                <img class="phone__base phone-vertical" src="./assets/images/phone-vertical.png" alt="Vertical phone">
+                <img class="phone__display phone-vertical" src="./assets/images/phone-vertical-display.png" alt="Vertical phone screen content">
               </div>
-              <div class="iphone-horizontal">
-                <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Horizontal phone">
-                <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Horizontal phone">
-                <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone screen content">
+              <div class="phone-container">
+                <img class="phone__shadow phone-horizontal" src="./assets/images/phone-horizontal-shadow.png" alt="Horizontal phone">
+                <img class="phone__base phone-horizontal" src="./assets/images/phone-horizontal.png" alt="Horizontal phone">
+                <img class="phone__display phone-horizontal" src="./assets/images/phone-horizontal-display.png" alt="Horizontal phone screen content">
               </div>
             </li>
             <li class="slider-list__item" data-bg_style="slider__item2">
-              <div class="iphones-container">
-                <img class="iphone__bg" src="./assets/images/iphones-bg.png" alt="Vertical phones">
-                <img class="iphone__base" src="./assets/images/iphone-base-big.png" alt="Vertical phones">
-                <img class="iphone__screen" src="./assets/images/iphones-vertical-screen.png" alt="Vertical phones screen content">
+              <div class="phone-container">
+                <img class="phone__shadow phones-vertical" src="./assets/images/phones-bg.png" alt="Vertical phones">
+                <img class="phone__base phones-vertical" src="./assets/images/phones-base-big.png" alt="Vertical phones">
+                <img class="phone__display phones-vertical" src="./assets/images/phones-vertical-screen.png" alt="Vertical phones screen content">
               </div>
             </li>
           </ul>
