--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="services__title">Our services</h2>
         <p class="services__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 
-        <ul class="services__features features-list pixel-perfect">
+        <ul class="services__features features-list">
 
           <li class="features-list__item feature-tile feature-tile--pen">
             <h3 class="feature-tile__title">Custom design</h3>
@@ -127,7 +127,7 @@
         <h2 class="portfolio__title">Portfolio</h2>
         <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
   
-        <ul id="tabs-list" class="portfolio__tabs tabs-list pixel-perfect">
+        <ul id="tabs-list" class="portfolio__tabs tabs-list">
           <li class="tabs-list__item"><button class="portfolio-tab portfolio-tab--active">All</button></li>
           <li class="tabs-list__item"><button class="portfolio-tab">Web design</button></li>
           <li class="tabs-list__item"><button class="portfolio-tab">Graphic design</button></li>
@@ -136,40 +136,40 @@
   
         <ul id="images-list" class="portfolio__images images-list">
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--01" src="./assets/images/image-01.png" alt="portfolio image 1">
+            <img class="portfolio__img" src="./assets/images/portfolio-01.png" alt="portfolio image 1">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--02" src="./assets/images/image-02.png" alt="portfolio image 2">
+            <img class="portfolio__img" src="./assets/images/portfolio-02.png" alt="portfolio image 2">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--03" src="./assets/images/image-03.png" alt="portfolio image 3">
+            <img class="portfolio__img" src="./assets/images/portfolio-03.png" alt="portfolio image 3">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--04" src="./assets/images/image-04.png" alt="portfolio image 4">
+            <img class="portfolio__img" src="./assets/images/portfolio-04.png" alt="portfolio image 4">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--05" src="./assets/images/image-05.png" alt="portfolio image 5">
+            <img class="portfolio__img" src="./assets/images/portfolio-05.png" alt="portfolio image 5">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--06" src="./assets/images/image-06.png" alt="portfolio image 6">
+            <img class="portfolio__img" src="./assets/images/portfolio-06.png" alt="portfolio image 6">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--07" src="./assets/images/image-07.png" alt="portfolio image 7">
+            <img class="portfolio__img" src="./assets/images/portfolio-07.png" alt="portfolio image 7">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--08" src="./assets/images/image-08.png" alt="portfolio image 8">
+            <img class="portfolio__img" src="./assets/images/portfolio-08.png" alt="portfolio image 8">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--09" src="./assets/images/image-09.png" alt="portfolio image 9">
+            <img class="portfolio__img" src="./assets/images/portfolio-09.png" alt="portfolio image 9">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--10" src="./assets/images/image-10.png" alt="portfolio image 10">
+            <img class="portfolio__img" src="./assets/images/portfolio-10.png" alt="portfolio image 10">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--11" src="./assets/images/image-11.png" alt="portfolio image 11">
+            <img class="portfolio__img" src="./assets/images/portfolio-11.png" alt="portfolio image 11">
           </li>
           <li class="images-list__item" tabindex="0">
-            <img class="portfolio__img portfolio__img--12" src="./assets/images/image-12.png" alt="portfolio image 12">
+            <img class="portfolio__img" src="./assets/images/portfolio-12.png" alt="portfolio image 12">
           </li>
         </ul>
 
@@ -189,7 +189,7 @@
             <h3 class="employee-card__title">Adam Jensen</h3>
             <p class="employee-card__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
             
-            <ul class="employee-card__socials socials-list pixel-perfect">
+            <ul class="employee-card__socials socials-list">
               <li class="socials-list__item">
                 <a class="social-link social-link--facebook" href="#!">Link to Facebook</a>
               </li>
@@ -206,7 +206,7 @@
           </li>
 
           <li class="employees-list__item employee-card">
-            <img class="employee-card__img pixel-perfect" src="./assets/images/photo-02.png" alt="Desmond Miles">
+            <img class="employee-card__img" src="./assets/images/photo-02.png" alt="Desmond Miles">
             <h3 class="employee-card__title">Desmond Miles</h3>
             <p class="employee-card__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
           
@@ -328,7 +328,7 @@
                 <a href="tel:035283318635" class="contact-link contact-link--phone">03528 331 86 35</a>
               </li>
               <li class="contacts-list__item">
-                <a href="mailto:info@singolo.com" class="contact-link contact-link--mail pixel-perfect">info@singolo.com</a>
+                <a href="mailto:info@singolo.com" class="contact-link contact-link--mail">info@singolo.com</a>
               </li>
             </ul>
 
