--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <header class="header">
     <div class="wrapper header__wrapper">
 
+      <button class="hamburger header__hamburger" aria-label="side-menu hamburger-button">
+        <span class="hamburger__line"></span>
+      </button>
+    
       <h1>
         <span class="logo">Singolo</span>
       </h1>
@@ -37,6 +41,33 @@
           </li>
         </ul>
       </nav>
+
+    </div>
+
+    <div class="side-menu header__side-menu">
+
+      <div class="side-menu__content">
+        <span class="logo side-menu__logo">Singolo</span>
+        <nav>
+          <ul id="navbar-side-menu" class="navbar navbar--aside side-menu__navbar">
+            <li class="navbar__item navbar__item--aside">
+              <a class="navbar__link navbar__link--aside" href="#slider">Home</a>
+            </li>
+            <li class="navbar__item navbar__item--aside">
+              <a class="navbar__link navbar__link--aside" href="#services">Services</a>
+            </li>
+            <li class="navbar__item navbar__item--aside">
+              <a class="navbar__link navbar__link--aside" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="navbar__item navbar__item--aside">
+              <a class="navbar__link navbar__link--aside" href="#about-us">About</a>
+            </li>
+            <li class="navbar__item navbar__item--aside">
+              <a class="navbar__link navbar__link--aside" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
     </div>
   </header>
