feat: add basic function to humburger button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="wrapper header__wrapper">
 
-      <button class="hamburger header__hamburger" aria-label="side-menu hamburger-button">
+      <button id="header-hamburger" class="hamburger header__hamburger" aria-label="side-menu hamburger-button">
         <span class="hamburger__line"></span>
       </button>
     
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class="side-menu header__side-menu">
+    <div id="aside-menu" class="side-menu header__side-menu side-menu--hidden">
 
       <div class="side-menu__content">
         <span class="logo side-menu__logo">Singolo</span>
