feat: add animation to side menu show/hide

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="side-menu__content">
         <span class="logo side-menu__logo">Singolo</span>
-        <nav>
+        <nav class="side-menu__nav">
           <ul id="navbar-side-menu" class="navbar navbar--aside side-menu__navbar">
             <li class="navbar__item navbar__item--aside">
               <a class="navbar__link navbar__link--aside" href="#slider">Home</a>
