--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="slider" class="slider">
       <div class="wrapper">
         
-        <div class="slider__container">
+        <div id="slider-container" class="slider__container">
 
           <button class="slider__button slider__button--left" aria-label="previous slide"></button>
           <button class="slider__button slider__button--right" aria-label="next slide"></button>
